PROJECT(PIC2D)
ENABLE_LANGUAGE(Fortran)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_BUILD_TYPE None)

MESSAGE( STATUS "PIC2D_BINARY_DIR: ${PIC2D_BINARY_DIR}" )
MESSAGE( STATUS "PIC2D_SOURCE_DIR: ${PIC2D_SOURCE_DIR}" )
IF (CMAKE_PROJECT_NAME MATCHES "PIC2D")
   SET(SLL_SOURCE_DIR "${PIC2D_SOURCE_DIR}/../../prototype/src")
ENDIF()
MESSAGE( STATUS "SLL_SOURCE_DIR: ${SLL_SOURCE_DIR}" )

SET (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules 
                       ${SLL_SOURCE_DIR}/CMakeModules
                       ${CMAKE_MODULE_PATH} )

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
SET(CMAKE_Fortran_MODULE_DIRECTORY "${CMAKE_BINARY_DIR}/modules")
INCLUDE_DIRECTORIES(${CMAKE_Fortran_MODULE_DIRECTORY})

INCLUDE_DIRECTORIES(${SLL_SOURCE_DIR}/selalib_level)
LINK_DIRECTORIES(${SLL_SOURCE_DIR}/selalib_level)

MESSAGE(STATUS "CMAKE_Fortran_COMPILER:${CMAKE_Fortran_COMPILER}")

IF(CMAKE_Fortran_COMPILER MATCHES "gfortran")

   ADD_DEFINITIONS(-DGFORTRAN)
   SET(CMAKE_Fortran_FLAGS "-O3 -ffree-line-length-none")

ELSEIF(CMAKE_Fortran_COMPILER MATCHES "ifort")

   SET(CMAKE_Fortran_FLAGS "-O3")
   ADD_DEFINITIONS(-DINTEL)

ELSEIF(CMAKE_Fortran_COMPILER_NAME MATCHES "xlf")

   SET(CMAKE_Fortran_FLAGS "-qextname=flush -qthreaded -qhalt=e -qxlf2003=polymorphic")

ENDIF()

MESSAGE(STATUS "CMAKE_Fortran_FLAGS:${CMAKE_Fortran_FLAGS}")

FIND_PACKAGE(LAPACK)
IF( NOT LAPACK_FOUND)
   INCLUDE(${SLL_SOURCE_DIR}/CMakeModules/LapackConfig.cmake)
ENDIF( NOT LAPACK_FOUND)

SET(SILO_ENABLED    OFF CACHE BOOL "Use SILO Library from LLNL ")
SET(FFTW_ENABLED    OFF CACHE BOOL "Use fftw library       " )

IF(SILO_ENABLED) 
   FIND_PACKAGE(SILO  REQUIRED)
   IF(SILO_FOUND)
      ADD_DEFINITIONS(-D_SILO)
      INCLUDE_DIRECTORIES(${SILO_INCLUDE_DIRS})
      SET(CMAKE_EXE_LINKER_FLAGS "-lsupc++")
      MESSAGE(STATUS "SILO_LIBRARIES:${SILO_LIBRARIES}")
   ENDIF()
ENDIF()

IF(FFTW_ENABLED AND NOT FFTW_FOUND)
   FIND_PACKAGE(FFTW)
   IF(FFTW_FOUND)
      ADD_DEFINITIONS(-D_FFTW)
      INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIRS})
   ENDIF()
   MESSAGE(STATUS "FFTW_LIBRARIES:${FFTW_LIBRARIES}")
ENDIF()

IF(NOT MPI_FOUND)
   FIND_PACKAGE(MPI REQUIRED Fortran)
ENDIF(NOT MPI_FOUND)
SET(CMAKE_Fortran_COMPILER ${MPI_Fortran_COMPILER})

SET(HDF5_PARALLEL_ENABLED ON CACHE BOOL "Enable HDF5 parallel")

IF(NOT HDF5_FOUND)
   INCLUDE(HDF5Config)
   IF(HDF5_ENABLE_PARALLEL) 
      MESSAGE(STATUS "HDF5 parallel supported")
   ELSE()
      MESSAGE(SEND_ERROR "HDF5 parallel not supported")
      MESSAGE(SEND_ERROR "./configure --enable-fortran --enable-parallel CC=mpicc FC=mpiF90")
   ENDIF()
ENDIF(NOT HDF5_FOUND)

IF (CMAKE_PROJECT_NAME MATCHES "PIC2D")
   INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../../prototype/src/assert)
   INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../../prototype/src/memory)
   INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../../prototype/src/precision)
   INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../../prototype/src/utilities)
   ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/../../prototype/src/selalib_level ${CMAKE_BINARY_DIR}/selalib_level EXCLUDE_FROM_ALL)
ELSE()
   INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
ENDIF()

SET(PIC2D_SRC zone.F90 
            initialisation.F90 
            kiss.F90 
            quietstart.F90 
            particules.F90
	    poisson.F90 
            villasenor.F90 
            maxwell.F90 
            diagno.F90 )

ADD_LIBRARY(pic2d STATIC ${PIC2D_SRC})

ADD_DEPENDENCIES(pic2d selalib)

SET(LIBS selalib ${SILO_LIBRARIES} ${LAPACK_LIBRARIES} 
                 ${FFTW_LIBRARIES} ${HDF5_LIBRARIES})

ADD_EXECUTABLE(test_pic2d main.F90)
TARGET_LINK_LIBRARIES(test_pic2d pic2d ${LIBS})

ENABLE_TESTING()

SET(PROCS 1)
SET(ARGS "${CMAKE_CURRENT_SOURCE_DIR}/../input/data.nml")
ADD_TEST(NAME test_pic2d COMMAND 
         ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${PROCS} ${MPIEXEC_PREFLAGS}
         ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_pic2d
         ${MPIEXEC_POSTFLAGS} ${ARGS})

SET_TESTS_PROPERTIES(test_pic2d PROPERTIES PASS_REGULAR_EXPRESSION "PASSED")

